--- a/dm_final project(1).ipynb
+++ b/dm_final project(1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a6187105-7430-4673-b962-04f708cb0c46",
    "metadata": {},
    "outputs": [],
@@ -18,12 +18,12 @@
     "import statsmodels.api as sm\n",
     "import os\n",
     "import warnings\n",
-    "from typing import List, Dict\n"
+    "from typing import List, Dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "ad89dd34-51f3-46bc-8084-dc940c2e87de",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "e0a9725d-19fc-41f4-a483-00517bd78141",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "1da52944-8fe9-4286-9ff8-1951f7b3a19b",
    "metadata": {},
    "outputs": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "6063756f-c4de-4b0e-9dd0-cefd1ef8b51d",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "ce4a5adf-fbab-43d4-a0fe-17fdd27305f5",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "6e887867-9c2d-41a4-95e7-fc780d977222",
    "metadata": {},
    "outputs": [
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "6d96569e-01ff-4feb-941e-50015f164634",
    "metadata": {},
    "outputs": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "b5b2d8fc-3117-4800-a62c-09698acebeda",
    "metadata": {},
    "outputs": [
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "eeb7244f-b1c2-479c-b71f-ac4417bc357c",
    "metadata": {},
    "outputs": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "8b2403fd-0d7a-42e7-b00e-2d70cc2a862c",
    "metadata": {},
    "outputs": [
@@ -619,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "d8e2f2a5-54a0-4951-a515-29d5cbcc7ca0",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "c3bdfccd-776e-4aee-a2cd-73d93c578d40",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "24be53c8-41e7-41bc-b677-db0ea86cc41c",
    "metadata": {},
    "outputs": [
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "97f7bc86-7b63-4f47-a9e1-f0a022daf3d3",
    "metadata": {},
    "outputs": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "e97011ff-c9ca-462b-88d3-5fed74c5ea92",
    "metadata": {},
    "outputs": [
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "ec7171e7-ac4f-4967-bc18-80c313257549",
    "metadata": {},
    "outputs": [],
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "b6bc7cb7-1010-4a6c-825c-3e1334fcf090",
    "metadata": {},
    "outputs": [],
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "590884bf-4695-4649-95e9-0b7aa4e518f1",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "a28a060a-6f54-4cc0-9a2e-4bd60485e88f",
    "metadata": {},
    "outputs": [],
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "3fed5572-3d78-459c-bfce-bd9eb6a2353f",
    "metadata": {},
    "outputs": [
@@ -919,16 +919,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
+   "id": "901ebf98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = spot_df.drop(columns = 'track_popularity')\n",
+    "y = spot_df['track_popularity']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a478b575",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split the data\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "07f05166-1652-4f84-aaf0-82a864646123",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "numeric_cols = X.select_dtypes(include='number').columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "f79c3de7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scale numeric features\n",
+    "scaler = StandardScaler()\n",
+    "train_scaled = scaler.fit_transform(X_train[numeric_cols])\n",
+    "test_scaled = scaler.transform(X_test[numeric_cols])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "57a38c53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combine scaled and categorical columns\n",
+    "X_train = np.hstack([train_scaled, X_train.drop(columns=numeric_cols).values])\n",
+    "X_test = np.hstack([test_scaled, X_test.drop(columns=numeric_cols).values])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "8827e4e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3828, 13)\n",
+      "(958, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
