fixed OLS output typo

--- a/dm_final project(1).ipynb
+++ b/dm_final project(1).ipynb
@@ -1113,8 +1113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "e86e5e88",
+   "execution_count": 47,
+   "id": "620d787b",
    "metadata": {},
    "outputs": [
     {
@@ -1125,7 +1125,7 @@
       "\n",
       "Mean Squared Error: 345.37\n",
       "Root Mean Squared Error: 18.58\n",
-      "R2 Score: 0.1779428971783401\n"
+      "R2 Score: 0.1779348490498317\n"
      ]
     }
    ],
@@ -1139,13 +1139,13 @@
     "OLS_mse = mean_squared_error(y_test, OLS_pred).round(2)\n",
     "OLS_rmse = np.sqrt(OLS_mse).round(2)\n",
     "OLS_r2 = r2_score(y_test, OLS_pred)\n",
-    "print(f\"Linear Regression Evaluation (OLS/Ridge):\\n\\nMean Squared Error: {reg_mse}\\nRoot Mean Squared Error: {reg_rmse}\\nR2 Score: {regr_r2}\")\n"
+    "print(f\"Linear Regression Evaluation (OLS/Ridge):\\n\\nMean Squared Error: {OLS_mse}\\nRoot Mean Squared Error: {OLS_rmse}\\nR2 Score: {OLS_r2}\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "9f3e6fb4",
+   "id": "cab26b72",
    "metadata": {},
    "outputs": [
     {
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "007efffe",
+   "id": "d50d20a3",
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47806930",
+   "id": "6f115e1d",
    "metadata": {},
    "outputs": [],
    "source": []
