fixed comment typo & and poly_reg degree to 3

--- a/dm_final project(1).ipynb
+++ b/dm_final project(1).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "id": "a6187105-7430-4673-b962-04f708cb0c46",
    "metadata": {},
    "outputs": [],
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 30,
    "id": "244d500d",
    "metadata": {},
    "outputs": [
@@ -1113,8 +1113,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "620d787b",
+   "execution_count": 31,
+   "id": "b71c94bf",
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1130,7 @@
     }
    ],
    "source": [
-    "# Multi-modal Multi-modal Linear Regression (OLS)\n",
+    "# Multi-modal Linear Regression (OLS)\n",
     "\n",
     "OLS = Ridge(alpha=1.0)\n",
     "OLS.fit(X_train, y_train)\n",
@@ -1144,8 +1144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "cab26b72",
+   "execution_count": 32,
+   "id": "91f130fd",
    "metadata": {},
    "outputs": [
     {
@@ -1175,8 +1175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "d50d20a3",
+   "execution_count": 33,
+   "id": "63b732ad",
    "metadata": {},
    "outputs": [
     {
@@ -1185,16 +1185,16 @@
      "text": [
       "Polynomial Regression Evaluation:\n",
       "\n",
-      "Mean Squared Error: 321.41\n",
-      "Root Mean Squared Error: 17.93\n",
-      "R2 Score: 0.23498276463271495\n"
+      "Mean Squared Error: 313.25\n",
+      "Root Mean Squared Error: 17.7\n",
+      "R2 Score: 0.2543995728927817\n"
      ]
     }
    ],
    "source": [
     "# Polynomial Regression\n",
     "\n",
-    "degree = 2\n",
+    "degree = 3\n",
     "poly_features = PolynomialFeatures(degree=degree)\n",
     "X_poly = poly_features.fit_transform(X)\n",
     "X_poly_train, X_poly_test, y_train, y_test = train_test_split(X_poly, y, test_size = 0.2, random_state =42)\n",
@@ -1212,7 +1212,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f115e1d",
+   "id": "c1a1c2a7",
    "metadata": {},
    "outputs": [],
    "source": []
